Build ES image with x-pack
With x-pack we need tests to take security into
consideration. Additionally the cluster health tests behave differently
on single node as Elasticsearch will always have some indices.

Committing `test_xpack_basic_index_crud.py` with xpack specific test
cases; adjusting the es_acceptance.py library but it remains compatible
for the non x-pack version of tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
   tester:
     build:
       context: build/python
-    command: py.test tests
+    command: py.test tests/test_xpack_basic_index_crud.py
     image: "tester:latest"
     links:
       - elasticsearch1:elasticsearch
