Change cli params to be ENV vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,15 @@ services:
   # Can't use service elasticsearch=<num> for now due to named volumes
   elasticsearch1:
   # Equivalent to:
-  # docker run --rm --cap-add=IPC_LOCK --ulimit memlock=-1:-1 --ulimit nofile=65536:65536 -t -P --memory="4g" -v esdata:/usr/share/elasticsearch/data elasticsearch:5.0.0-alpha5 bin/elasticsearch
+  # docker run --rm --cap-add=IPC_LOCK --ulimit memlock=-1:-1 --ulimit nofile=65536:65536 -t -P --memory="4g" -e "discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}" -v esdata:/usr/share/elasticsearch/data elasticsearch:5.0.0:beta1 bin/elasticsearch
     build:
       context: build/elasticsearch
       args:
         ELASTICSEARCH_VERSION: "${ELASTICSEARCH_VERSION}"
     cap_add:
       - IPC_LOCK
-    command: bin/elasticsearch -E discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
+    environment:
+      - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
     image: "elasticsearch:${ELASTICSEARCH_VERSION}"
     mem_limit: 4g
     ports:
@@ -33,7 +34,9 @@ services:
         ELASTICSEARCH_VERSION: "${ELASTICSEARCH_VERSION}"
     cap_add:
       - IPC_LOCK
-    command: bin/elasticsearch -E discovery.zen.ping.unicast.hosts=elasticsearch1 -E discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
+    environment:
+      - discovery.zen.ping.unicast.hosts=elasticsearch1
+      - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
     image: "elasticsearch:${ELASTICSEARCH_VERSION}"
     links:
       - elasticsearch1
