Use ELASTIC_VERSION and unify make targets
All our docker image repos should harmonize and just expect the
`ELASTIC_VERSION` env var set instead of of
`(ELASTICSEARCH|KIBANA|LOGSTASH)_VERSION`.

Require ELASTIC_VERSION instead of ELASTICSEARCH_VERSION.

Harmonize Makefile targets to be consistent with the other Docker
image repos: default target is `test` which builds+runs tests, whereas
`build` just builds images.

Simplify housekeeping target to be called `clean`.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: build/elasticsearch
       args:
-        ELASTICSEARCH_VERSION: "${ELASTICSEARCH_VERSION}"
+        ELASTIC_VERSION: "${ELASTIC_VERSION}"
         ES_DOWNLOAD_URL: "${ES_DOWNLOAD_URL}"
         ES_JAVA_OPTS: "${ES_JAVA_OPTS}"
     cap_add:
@@ -33,7 +33,7 @@ services:
     build:
       context: build/elasticsearch
       args:
-        ELASTICSEARCH_VERSION: "${ELASTICSEARCH_VERSION}"
+        ELASTIC_VERSION: "${ELASTIC_VERSION}"
         ES_DOWNLOAD_URL: "${ES_DOWNLOAD_URL}"
         ES_JAVA_OPTS: "${ES_JAVA_OPTS}"
     cap_add:
