--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
       - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
     image: "${VERSIONED_IMAGE}"
     mem_limit: 4g
+    networks:
+      esnet:
+        aliases:
+          - elasticsearch
     ulimits:
       memlock:
         soft: -1
@@ -39,9 +43,9 @@ services:
       - discovery.zen.ping.unicast.hosts=elasticsearch1
       - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
     image: "${VERSIONED_IMAGE}"
-    links:
-      - elasticsearch1
     mem_limit: 4g
+    networks:
+      - esnet
     ulimits:
       memlock:
         soft: -1
@@ -56,6 +60,8 @@ services:
       context: build/python
     command: py.test -p no:cacheprovider tests/test_xpack_basic_index_crud.py
     image: "tester:latest"
+    networks:
+      - esnet
     links:
       - elasticsearch1:elasticsearch
     volumes:
@@ -65,3 +71,6 @@ volumes:
     driver: local
   esdata2:
     driver: local
+networks:
+  esnet:
+    driver: bridge
