Add tests for overriding heap via env vars
Overriding the default heap is something that is frequently done using
Docker environment variables.

Introduce a fixture to return an array of the heap_max_in_bytes ES jvm
settings for all nodes which we use to assert that our test parameters
are being used correctly.

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       # Try setting an option with an environment variable.
       - node.name=docker-test-node-1
+      # Define max heap to a non default value and let us test it's set correctly
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
       # Also try a shell-friendly, all capitals variable.
       - ES_CLUSTER_NAME=docker-test-cluster
 
@@ -18,4 +20,5 @@ services:
   elasticsearch2:
     environment:
       - node.name=docker-test-node-2
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
       - ES_CLUSTER_NAME=docker-test-cluster
