Add tests to ensure non ES specific env vars are parsed by wrapper
The es-docker wrapper converts Docker environments variables to
Elasticsearch parameters that are lowercase and separated at least by
one dot.

Ensure env variables that don't match the above pattern[1] are not passed
to Elasticsearch.

[1] The elasticsearch conf params `processors` and `pidfile` are not
relevant as container cpu resources can be limited with Docker.

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -6,19 +6,23 @@ version: '2'
 services:
   elasticsearch1:
     environment:
-      # Try setting an option with an environment variable.
+      # Try setting a few options with environment variables.
+      - cluster.name=docker-test-cluster
       - node.name=docker-test-node-1
-      # Define max heap to a non default value and let us test it's set correctly
+      # Test setting max heap to a non default value with environment variables.
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
-      # Also try a shell-friendly, all capitals variable.
-      - ES_CLUSTER_NAME=docker-test-cluster
-
-    # Expose elasticsearch to the host system, so that the test suite can see it.
+      # Env vars not followed by a dot, should not be parsed by the wrapper script.
+      - irrelevantsetting=foo
+      # Capitalized or all-caps env vars should not be parsed either
+      - NonESRelatedVariable=bar
+    # Expose Elasticsearch to the host system, so that the test suite can see it.
     ports:
       - 9200:9200
 
   elasticsearch2:
     environment:
+      - cluster.name=docker-test-cluster
       - node.name=docker-test-node-2
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
-      - ES_CLUSTER_NAME=docker-test-cluster
+      - irrelevantsetting=foo
+      - NonESRelatedVariable=bar
