--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -8,7 +8,10 @@ services:
     # Let Testinfra infer the container name by making the hostname the same.
     hostname: elasticsearch1
     environment:
+      # Specify the bootstrap password for elastic user.
       - ELASTIC_PWD=pleasechangeme
+      # Let us use the (insecure) prebundled TLS certs through a flag.
+      - ALLOW_INSECURE_DEFAULT_TLS_CERT=
       # Try setting a few options with environment variables.
       - cluster.name=docker-test-cluster
       - node.name=docker-test-node-1
@@ -30,6 +33,7 @@ services:
     hostname: elasticsearch2
     environment:
       - ELASTIC_PWD=pleasechangeme
+      - ALLOW_INSECURE_DEFAULT_TLS_CERT=
       - cluster.name=docker-test-cluster
       - node.name=docker-test-node-2
       - thread_pool.bulk.queue_size=500
