Add acceptance test for bootstrap memorylock
One of the ways to disable swapping on ES is using the
bootstrap.memory_lock=true option.

Add acceptance tests to ensure that this works correctly in
Docker. Note that this option **requires** setting the `memlock`
ulimit to infinity which is possible in plain Docker (docker-compose v2
format) but not supported yet in Docker Swarm mode.

Also remove `NOFILE` ulimit definitions from docker-compose tests since with https://github.com/moby/moby/commit/8db61095a3d0bcb0733580734ba5d54bc27a614d
reasonably new versions of Docker set `NOFILE` and `NPROC` to infinity and
we don't need to explicitly override those ulimits in our test containers.

Finally, remove unused imports for .py test files.

Relates #98

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -21,10 +21,12 @@ services:
       - "ES_JAVA_OPTS=-Xms1152M -Xmx1152M"
       # Env vars not followed by a dot, should not be parsed by the wrapper script.
       - irrelevantsetting=foo
-      # Capitalized or all-caps env vars should not be parsed either
+      # Capitalized or all-caps env vars should not be parsed either.
       - NonESRelatedVariable=bar
       # Enable Security audit logging so we can check the output for correctness.
       - xpack.security.audit.enabled=true
+      # Tell ES to use mlockall to prevent it from swapping out.
+      - bootstrap.memory_lock=true
     # Expose Elasticsearch to the host system, so that the test suite can see it.
     ports:
       - 9200:9200
@@ -40,3 +42,4 @@ services:
       - "ES_JAVA_OPTS=-Xms1152M -Xmx1152M"
       - irrelevantsetting=foo
       - NonESRelatedVariable=bar
+      - bootstrap.memory_lock=true
