--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 **/.cache
 *.pyc
 /venv
-/docker-compose.yml
+/docker-compose*.yml
 build/elasticsearch/Dockerfile
 build/elasticsearch/Dockerfile-*
 build/elasticsearch/elasticsearch*.tar.gz
