--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 build/elasticsearch/Dockerfile
 build/elasticsearch/Dockerfile-*
 build/elasticsearch/elasticsearch*.tar.gz
+tests/docker-compose*.yml
