--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - xpack.security.audit.enabled=true
       # Tell ES to use mlockall to prevent it from swapping out.
       - bootstrap.memory_lock=true
+      # Avoid test failures due to small disks.
+      - cluster.routing.allocation.disk.threshold_enabled=false
     # Expose Elasticsearch to the host system, so that the test suite can see it.
     ports:
       - 9200:9200
@@ -37,3 +39,4 @@ services:
       - irrelevantsetting=foo
       - NonESRelatedVariable=bar
       - bootstrap.memory_lock=true
+      - cluster.routing.allocation.disk.threshold_enabled=false
