--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 docker-compose==1.11.2
 flake8==3.3.0
-ipdb
+ipdb==0.11
 jinja2-cli[yaml]==0.6.0
 jinja2==2.9.5
-requests==2.13.0
+requests==2.19.1
 retrying==1.3.3
 testinfra==1.6.0
-pytest
-pyfiglet
+pytest==3.6.2
+pyfiglet==0.7.5
