--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - node.name=docker-test-node-1
       # Also try a parameter containing an underscore character.
       - thread_pool.bulk.queue_size=500
+      # And try the special processors setting.
+      - processors=1
       # Test setting max heap to a non default value with environment variables.
       - "ES_JAVA_OPTS=-Xms1152M -Xmx1152M"
       # Env vars not followed by a dot, should not be parsed by the wrapper script.
@@ -35,6 +37,7 @@ services:
       - cluster.name=docker-test-cluster
       - node.name=docker-test-node-2
       - thread_pool.bulk.queue_size=500
+      - processors=1
       - "ES_JAVA_OPTS=-Xms1152M -Xmx1152M"
       - irrelevantsetting=foo
       - NonESRelatedVariable=bar
