--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-docker-compose==1.21.2
+docker-compose
 flake8==3.3.0
 ipdb
-jinja2-cli[yaml]==0.6.0
-jinja2==2.9.5
-requests==2.18.4
+requests<2.19
 retrying==1.3.3
 testinfra==1.6.0
 pytest
